--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.13.2",
     "next": "12.2.1",
+    "next-redux-wrapper": "^7.0.5",
     "prettier": "^2.7.1",
     "qs": "^6.11.0",
     "react": "18.2.0",
@@ -23,7 +25,10 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
-    "recoil": "^0.7.4"
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
