--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "ts-jenum": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
