--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.13.2",
     "next": "12.2.1",
+    "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^7.0.5",
     "prettier": "^2.7.1",
     "qs": "^6.11.0",
