--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.13.2",
+    "cookies-next": "^2.1.1",
     "next": "12.2.1",
     "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^7.0.5",
