--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start -p ${PORT-3000}",
     "test": "jest"
   },
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.9.3",
@@ -34,11 +37,21 @@
     "ts-jenum": "^2.2.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/react": "^13.3.0",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "babel-jest": "^29.0.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.1",
+    "jest": "^29.0.1",
+    "jest-environment-jsdom": "^29.0.1",
+    "react-test-renderer": "^18.2.0",
     "typescript": "4.7.4"
   }
 }
