--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.37.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
