--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.37.0",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.0",
     "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
